--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     }
 
     .container {
-      position: relative;
+      position: absolute;
       width: 220px;
       height: 140px;
       z-index: 2;
       cursor: pointer;
-      right: 100%;
+      transform: translate(-50%,-50%);
+      top: 80%;
+      left: 50%;
     }
 
     .envelope {
@@ -77,9 +79,9 @@
     .letter {
       text-align: left;
       position: absolute;
-      top: 32%;
-      left: 55%;
-      /* transform: translate(50px); */
+      top: 60px;
+      left: 40%;
+      transform: translateX(-50px) translateY(30px);
       width: 350px;
       height: 250px;
       background: white;
@@ -103,11 +105,12 @@
     .letter.show {
       display: flex;
       opacity: 1;
-      transform: translate(50px);
+      transform: translateX(-50px) translateY(0px);
     }
 
     .music-icon {
       position: absolute;
+      align-items: center;
       bottom: 15px;
       font-size: 0.9rem;
       color: #666;
@@ -120,6 +123,11 @@
       }
 
       .letter {
+        position: relative;
+        top: -35px;
+        left: 16%;
+        width: 300px;
+        height: 200px;
        font-size: 1rem;
         padding: 10px;
         line-height: 1.6;
